uptime-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: uptime
spec:
  replicas: 2
  revisionHistoryLimit: 3
  selector:
    matchLabels:
      app: uptime
  template:
    metadata:
      labels:
        app: uptime
    spec:
      containers:
        - image: louislam/uptime-kuma:1.22.1
          name: uptime
          ports:
            - containerPort: 3001
