uptime-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: uptime
  namespace: default
spec:
  ports:
    - port: 3001
      targetPort: 3001
  selector:
    app: uptime
