uptime-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: uptime-virtual-host-ingress
  namespace: default
  annotations:
    #kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
    nginx.ingress.kubernetes.io/ssl-passthrough: "true"
    nginx.ingress.kubernetes.io/backend-protocol: "HTTP"
spec:
  rules:
  - host: uptime.local
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: uptime
            port:
              number: 3001
